--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,7 +8,7 @@
 }
 * {
   margin: 0;
-  padding : 0;
+  padding: 0;
 }
 
 html,
@@ -47,9 +47,12 @@ h6 {
   overflow-wrap: break-word;
 }
 body {
-  font-family: "Poppins",sans-serif;
-  font-size:16px;
-  color : #232323;
+  line-height: 1.5;
+  // -webkit-font-smoothing: antialiased;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  font-family: "Epilogue", sans-serif;
+  font-size: 16px;
+  color: #232323;
 }
 .container {
   width: 100%;
@@ -62,7 +65,7 @@ a {
   color: inherit;
 }
 .text-primary {
-  color : #a4d96c;
+  color: #a4d96c;
 }
 .grid-layout {
   display: grid;
@@ -157,4 +160,15 @@ a {
   width: 1px;
   white-space: nowrap;
 }
-
+.swiper-layout .swiper-slide {
+  width: 1200px;
+}
+.form-layout {
+  @apply grid grid-cols-1 lg:grid-cols-2 lg:gap-x-10 mb-5 lg:mb-10;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  box-shadow: 0 0 0 30px white inset;
+}
