--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -114,7 +114,7 @@ a {
   white-space: nowrap;
 }
 .swiper-layout .swiper-slide {
-  width: 1200px;
+  width: 100%;
 }
 .form-layout {
   @apply grid grid-cols-1 lg:grid-cols-2 lg:gap-x-10 mb-5 lg:mb-10;
