--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -126,22 +126,34 @@ input:-webkit-autofill:active {
   box-shadow: 0 0 0 30px white inset;
 }
 .quill {
-  position: relative;
-  .ql-toolbar {
-    position: sticky;
-    top: 0;
-    background-color: white;
-    z-index: 10;
+  @apply border border-strock rounded-xl;
+  border-radius: 10px;
+  padding: 15px 25px;
+  .ql-toolbar.ql-snow {
+    border: none;
+    @apply bg-text4 bg-opacity-10 rounded-xl py-3 px-5 inline-block;
+  }
+  .ql-container.ql-snow,
+  .ql-editor {
+    @apply border-none font-primary text-base;
+  }
+  .ql-editor {
+    @apply pt-10;
+  }
+  .ql-editor.ql-blank::before {
+    font-style: normal;
+    @apply text-sm not-italic text-text4;
   }
 }
+
 .triangle-down {
   position: absolute;
-  bottom : 0;
+  bottom: 0;
   right: 50%;
   transform: translateX(50%) translateY(100%);
   width: 0;
   height: 0;
   border-left: 8px solid transparent;
   border-right: 8px solid transparent;
-  border-top: 12px solid #A4D96C;
+  border-top: 12px solid #a4d96c;
 }
