--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -126,23 +126,23 @@ input:-webkit-autofill:active {
   box-shadow: 0 0 0 30px white inset;
 }
 .quill {
-  @apply border border-strock rounded-xl;
+  @apply border border-[##F1F1F3] rounded-xl text-center;
   border-radius: 10px;
   padding: 15px 25px;
   .ql-toolbar.ql-snow {
     border: none;
-    @apply bg-text4 bg-opacity-10 rounded-xl py-3 px-5 inline-block;
+    @apply bg-[##B2B3BD] bg-opacity-10 rounded-xl py-3 px-5 inline-block;
   }
   .ql-container.ql-snow,
   .ql-editor {
-    @apply border-none font-primary text-base;
+    @apply border-none font-[#1DC071] text-base;
   }
   .ql-editor {
     @apply pt-10;
   }
   .ql-editor.ql-blank::before {
     font-style: normal;
-    @apply text-sm not-italic text-text4;
+    @apply text-sm not-italic text-[##B2B3BD];
   }
 }
 
@@ -156,4 +156,7 @@ input:-webkit-autofill:active {
   border-left: 8px solid transparent;
   border-right: 8px solid transparent;
   border-top: 12px solid #a4d96c;
+}
+.ReactModal__Body--open{
+  overflow: hidden;
 }
