--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -48,7 +48,7 @@ h6 {
 }
 body {
   line-height: 1.5;
-  // -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   font-family: "Epilogue", sans-serif;
   font-size: 16px;
