--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -126,12 +126,12 @@ input:-webkit-autofill:active {
   box-shadow: 0 0 0 30px white inset;
 }
 .quill {
-  @apply border border-[##F1F1F3] rounded-xl text-center;
+  @apply border border-[#F1F1F3] rounded-xl text-center;
   border-radius: 10px;
   padding: 15px 25px;
   .ql-toolbar.ql-snow {
     border: none;
-    @apply bg-[##B2B3BD] bg-opacity-10 rounded-xl py-3 px-5 inline-block;
+    @apply bg-[#B2B3BD] bg-opacity-10 rounded-xl py-3 px-5 inline-block;
   }
   .ql-container.ql-snow,
   .ql-editor {
@@ -142,7 +142,7 @@ input:-webkit-autofill:active {
   }
   .ql-editor.ql-blank::before {
     font-style: normal;
-    @apply text-sm not-italic text-[##B2B3BD];
+    @apply text-sm not-italic text-[#B2B3BD];
   }
 }
 
